# newmedica

./: .gitignore  frontend-refactor-checklist.md  project-state.md  sync_report.md  todo.md
newmedica-backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  test.db
newmedica-backend/app/: main.py
newmedica-backend/app/controllers/: cart_controller.py  order_controller.py  user_controller.py
newmedica-backend/app/core/: config.py  exceptions.py  security.py  settings.py
newmedica-backend/app/db/: base.py  init_db.py  seed.py  session.py
newmedica-backend/app/models/: __init__.py  address.py  cart.py  category.py  order.py  product.py  product_media.py  shipping_config.py  user.py  user_type.py  voucher.py
newmedica-backend/app/repositories/: __init__.py  address_repository.py  base_repository.py  cart_repository.py  category_repository.py  media_repository.py  order_repository.py  product_repository.py  user_repository.py  voucher_repository.py
newmedica-backend/app/schemas/: __init__.py  address.py  admin_voucher.py  cart.py  category.py  media.py  order.py  payment.py  product.py  product_create.py  shipping_config.py  token.py  user.py  utils.py  voucher.py  voucher_schema.py
newmedica-backend/app/services/: address_service.py  admin_service.py  cart_service.py  category_service.py  media_service.py  (+4 more)
newmedica-backend/newmedica_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
newmedica-backend/tests/: conftest.py  utils.py
(+150 files in other folders)
