[project]
name = "newmedica-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
    "passlib[argon2]==1.7.4",
    "pydantic[email]",
    "python-jose[cryptography]",
    "sqlalchemy>=2.0.43",
    "pluggy>=1.6.0",
    "python-multipart>=0.0.20",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.2",
    "black>=24.4.2",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"]
ignore = []


[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
exclude = ["sync"]
